tests/snapshots/cli__card_has_meta_review_remembered_yes.snap
---
source: tests/cli.rs
info:
  program: logseq-srs
  args:
    - review
    - /tmp/.tmp3KKvOg/page.md
    - "--at=2025-11-22T00:00:00Z"
  page_lines:
    - "- Not card"
    - "- What is a sphere? #card"
    - "  card-last-interval:: 244.14"
    - "  card-repeats:: 6"
    - "  card-ease-factor:: 3.1"
    - "  card-next-schedule:: 2025-11-21T00:00:00.000Z"
    - "  card-last-reviewed:: 2025-03-22T09:54:57.202Z"
    - "  card-last-score:: 5"
    - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
    - "- Not card"
    - ""
  remembered: true
---
- Not card
- What is a sphere? #card
  card-last-interval:: 610.3515625
  card-repeats:: 7
  card-ease-factor:: 2.5
  card-next-schedule:: 2027-07-25T08:26:15.000Z
  card-last-reviewed:: 2025-11-22T00:00:00.000Z
  card-last-score:: 5
  - Set of points in a 3 dimensional space that are equidistant from a center point.
- Not card
