tests/snapshots/cli__card_with_unicode_prompt.snap
---
source: tests/cli.rs
info:
  program: logseq-srs
  args:
    - show
    - /tmp/.tmp0MfBNY/page.md
  page_lines:
    - "- Not card"
    - "- Какова связь между углами $\\\\alpha$ и $\\\\gamma_{1}$ на изображении относительно секущей?"
    - "  card-last-interval:: 30.0"
    - "  card-repeats:: 6"
    - "  card-ease-factor:: 2.5"
    - "  card-next-schedule:: 2026-01-01T00:00:00.000Z"
    - "  card-last-reviewed:: 2025-12-02T00:00:00.000Z"
    - "  card-last-score:: 5"
    - "  https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Transverzala_8.svg/262px-Transverzala_8.svg.png"
    - "  #card"
    - "  - Они накрест лежащие."
    - "- Not card"
    - ""
---
success: true
exit_code: 0
----- stdout -----
- Какова связь между углами $\\alpha$ и $\\gamma_{1}$ на изображении относительно секущей?
  https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Transverzala_8.svg/262px-Transverzala_8.svg.png
  #card
  - Они накрест лежащие.

----- stderr -----
